force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/RD_Outlet_Line_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RD Outlet Line Part Number</label>
    <nameField>
        <label>RD Outlet Line Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Outlet Line Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>