force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/DiscThckLL__c.field-meta.xml
<CustomField>
    <fullName>DiscThckLL__c</fullName>
    <label>DiscThckLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>