force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/DiscThckUL__c.field-meta.xml
<CustomField>
    <fullName>DiscThckUL__c</fullName>
    <label>DiscThckUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>