force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/MCOL__c.field-meta.xml
<CustomField>
    <fullName>MCOL__c</fullName>
    <label>MCOL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>