force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/MfgRngUL__c.field-meta.xml
<CustomField>
    <fullName>MfgRngUL__c</fullName>
    <label>MfgRngUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>