force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/OutletLinerPartNumber__c.field-meta.xml
<CustomField>
    <fullName>OutletLinerPartNumber__c</fullName>
    <label>OutletLinerPartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>