force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/PartSeat__c.field-meta.xml
<CustomField>
    <fullName>PartSeat__c</fullName>
    <label>PartSeat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>