force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/Qty_Per_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Qty_Per_Assembly__c</fullName>
    <label>Qty Per Assembly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>