force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/TempUL__c.field-meta.xml
<CustomField>
    <fullName>TempUL__c</fullName>
    <label>TempUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>