force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/ThckCode__c.field-meta.xml
<CustomField>
    <fullName>ThckCode__c</fullName>
    <label>ThckCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>