force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/fields/Thickness__c.field-meta.xml
<CustomField>
    <fullName>Thickness__c</fullName>
    <label>Thickness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>