force-app/main/default/objects/RD_Outlet_Line_Part_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PTC__c</columns>
    <columns>STC__c</columns>
    <columns>SZC__c</columns>
    <columns>MCOL__c</columns>
    <columns>CapHt__c</columns>
    <columns>DiscThckLL__c</columns>
    <columns>DiscThckUL__c</columns>
    <columns>DSCVAR__c</columns>
    <columns>MfgRngLL__c</columns>
    <columns>MfgRngUL__c</columns>
    <columns>OptionCode__c</columns>
    <columns>OutletLinerPartNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PTC__c</field>
        <operation>equals</operation>
        <value>PLV</value>
    </filters>
    <filters>
        <field>STC__c</field>
        <operation>equals</operation>
        <value>LL</value>
    </filters>
    <filters>
        <field>SZC__c</field>
        <operation>equals</operation>
        <value>0600</value>
    </filters>
    <filters>
        <field>MCOL__c</field>
        <operation>equals</operation>
        <value>070</value>
    </filters>
    <label>All</label>
</ListView>